Fixed bug where edit-cart buttons where appearing too small to see, and product images where flush with left margin, making the product divs look lopsided

--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ form div {
 .cartItems img {
   height: 150px;
   width: auto;
-  margin-left: 2em;
+  margin: 1em;
 }
 .cartItems div {
   margin: 1em;
